# VCFGeneratorLiteForTkinter

./: .gitattributes  .markdownlint.json  README.md  README.zh-CN.md  README.zh.md  os-notices.toml  os_notices.toml  pyproject.toml  vcf_generator_lite.iss  vcf_generator_lite.spec  vcf_generator_lite_versionfile.txt
.github/ISSUE_TEMPLATE/: bug.yaml  enhancement.yaml
.github/workflows/: build.yml  build_all.yml  release.yml  test.yml
docs/: CONTRIBUTING.md  README.md  README_zh.md
docs/compatibility/: runs-on-older-windows.md  runs-on-older_windows.md
docs/dev/: README.md  visual.md
docs/legal/: os-notices.md  os_notices.md  os_notices_template.py
scripts/: build_app.py  prepare_innosetup_extensions.py  utils.py  version.py
scripts/docs/: generate_os_notices.py
src/vcf_generator_lite/: __main__.py  constants.py
src/vcf_generator_lite/core/: vcf_generator.py
src/vcf_generator_lite/layouts/: vertical_dialog_layout.py
src/vcf_generator_lite/models/: contact.py
src/vcf_generator_lite/resources/locales/: en.toml  zh_CN.toml
src/vcf_generator_lite/resources/texts/: about.html
src/vcf_generator_lite/themes/: __init__.py  abs.py  base.py  clam_theme.py  default_patch.py  vista_patch.py  vista_theme.py
src/vcf_generator_lite/utils/: external_app.py  graphics.py  locales.py  resources.py
src/vcf_generator_lite/utils/display/: null_impl.py  windows_10_impl.py  windows_2000_impl.py  windows_8_1_impl.py  windows_vista_impl.py
src/vcf_generator_lite/utils/dpi_aware/: __init__.py  base.py  null_impl.py  windows_impl.py
src/vcf_generator_lite/utils/tkinter/: accelerators.py  busy.py  menu.py  misc.py  theme.py  widget.py  window.py
src/vcf_generator_lite/widgets/: menu.py  scrolled_treeview.py  text_menu.py
src/vcf_generator_lite/windows/about/: __init__.py  window.py
src/vcf_generator_lite/windows/base/: __init__.py
src/vcf_generator_lite/windows/invalid_lines/: common.py  controller.py  window.py
src/vcf_generator_lite/windows/main/: constants.py  controller.py  window.py
tests/: test_vcard.py
tests/models/: test_contact.py
typings/ttk_text/: __init__.pyi  scrolled_text.pyi  utils.pyi
