[project]
name = "vcf-generator-lite"
version = "4.2.1"
description = "A simple VCF generator"
authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ttk-text>=0.2.2"]

[dependency-groups]
test = [
    "pytest>=8.4.2",
]
lint = [
    "black>=25.9.0",
    "pyright>=1.1.407",
]
build = [
    "pyinstaller>=6.16.0",
    "pyinstaller-versionfile>=3.0.1",
    "requests>=2.32.5",
]
dev = [
    "colorlog>=6.9.0",
]

[project.urls]
Repository = "https://gitee.com/HelloTool/VCFGeneratorLiteForTkinter"
Github = "https://github.com/HelloTool/VCFGeneratorLiteForTkinter"
Issues = "https://gitee.com/HelloTool/VCFGeneratorLiteForTkinter/issues/new/choose"

[project.gui-scripts]
vcf-generator-lite = "vcf_generator_lite.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
plugins = ["pdm-packer"]
distribution = true

[tool.pdm.scripts]
build_app = { call = "scripts.build_app:main", help = "Build app." }
version = { call = "scripts.version:main", help = "Display or modify the project version number." }
test = { shell = "pytest", help = "Run tests." }
format = { shell = "black .", help = "Format code." }
lint = { shell = "pyright", help = "Lint code." }
prepare_innosetup_extensions = { call = "scripts.prepare_innosetup_extensions:main", help = "Download InnoSetup language files." }
docs_generate_os_notices = { call = "scripts.docs.generate_os_notices:main", help = "Generate Open Source notices." }

[tool.pdm.build]
is-purelib = true

[tool.black]
line-length = 120

[tool.pyright]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
typeCheckingMode = "strict"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportIncompatibleVariableOverride = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryIsInstance = "none"
reportImplicitOverride = "error"
ignore = ["src/vcf_generator_lite/widgets/tkhtmlview", "typings"]
